--- a/principal.html
+++ b/principal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria</title>
-    <link rel="stylesheet" href="desa.css" >
+    <link rel="stylesheet" href="principal.css" >
 </head>
 <body>
 <Header class="bondia">
